--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Poppins&family=Quicksand:wght@500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Poppins&display=swap"
         rel="stylesheet">
     <title>CSS is awesome</title>
 </head>
