--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                     </p>
                 </div>
                 <div class="info-message" style="margin-top: 1rem;">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -452,6 +456,10 @@
                     </div>
                 </div>
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -496,6 +504,10 @@
                     theme / Dark theme</h4>
                 <button id="btn-example-theme" type="button">Enable dark theme</button>
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -547,6 +559,10 @@
 
                 <h4 style="--margin-top: 3rem" class="section-subtitle-example">Inheritance</h4>
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -580,6 +596,10 @@
 
                 <h4 style="--margin-top: 3rem" class="section-subtitle-example">Inline style and variables</h4>
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -652,6 +672,10 @@
                 <h4 class="section-subtitle-example">Vertical scroll-snap</h4>
 
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -702,6 +726,10 @@
                 <h4 style="--margin-top: 3rem" class="section-subtitle-example">Horizontal scroll-snap</h4>
 
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
@@ -872,6 +900,10 @@
                 <!-- Second example Grid -->
                 <h4 style="--margin-top: 3rem" class="section-subtitle-example">CSS Grid Responsive</h4>
                 <div class="info-message">
+                    <!-- 
+                    Font Awesome Free 5.15.0 by @fontawesome - https://fontawesome.com 
+                    License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) 
+                    -->
                     <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
                         class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 352 512">
