update README and metatags

--- a/index.html
+++ b/index.html
@@ -5,35 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <!-- Primary Meta Tags -->
     <title>CSS is awesome</title>
     <meta name="title" content="CSS is awesome">
     <meta name="description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
+    <!-- CSS and fonts -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Poppins&display=swap" rel="stylesheet">
-
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/TODO">
+    <meta property="og:url" content="https://awesome-css.pablobuisson.fr/">
     <meta property="og:title" content="CSS is awesome">
     <meta property="og:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
     <meta property="og:image"
         content="images\awesome-css-big-image.png">
-
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/TODO">
+    <meta property="twitter:url" content="https://awesome-css.pablobuisson.fr/">
     <meta property="twitter:title" content="CSS is awesome">
     <meta property="twitter:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
