make the scroll link more visible on mobile

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <main>
         <!-- SECTION HOME -->
         <section id="section-home">
-            <h1>CSS IS AWESOME</h1>
+            <h1 id="main-title">CSS IS AWESOME</h1>
             <a id="scroll-button" href="#section-summary">
                 Scroll <span aria-hidden="true" class="bouncing-hand">👇</span>
             </a>
