improve night/light icons design

--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
     <meta property="og:title" content="CSS is awesome">
     <meta property="og:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
-    <meta property="og:image"
-        content="images\awesome-css-big-image.png">
+    <meta property="og:image" content="images\awesome-css-big-image.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://awesome-css.pablobuisson.fr/">
     <meta property="twitter:title" content="CSS is awesome">
     <meta property="twitter:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
-    <meta property="twitter:image"
-        content="images\awesome-css-big-image.png">
+    <meta property="twitter:image" content="images\awesome-css-big-image.png">
 </head>
 
 <body>
@@ -103,9 +101,73 @@
         <div id="container-light-theme">
             <button id="btn-theme" type="button" aria-pressed="true" aria-label="Activate light mode"
                 title="Activate light mode">
-                <span id="icon-light-mode" aria-hidden="true">🌞</span>
+                <span id="icon-light-mode" aria-hidden="true" style="transform: translateY(-3px); margin-right: 4px">
+                    <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
+                    <svg id="sun" xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 45.16 45.16"
+                        aria-hidden="true" focusable="false">
+                        <g id="Groupe_11" data-name="Groupe 11">
+                            <path id="sun-2" data-name="sun"
+                                d="M22.58,11.269A11.312,11.312,0,1,0,33.891,22.581,11.325,11.325,0,0,0,22.58,11.269Z"
+                                fill="#ffd466" stroke="#cca952" stroke-width="2.5" />
+                            <g id="Groupe_10" data-name="Groupe 10">
+                                <g id="Groupe_2" data-name="Groupe 2">
+                                    <path id="Tracé_5" data-name="Tracé 5"
+                                        d="M22.58,7.944a2.207,2.207,0,0,1-2.207-2.206V2.207a2.207,2.207,0,0,1,4.414,0V5.738A2.207,2.207,0,0,1,22.58,7.944Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_3" data-name="Groupe 3">
+                                    <path id="Tracé_6" data-name="Tracé 6"
+                                        d="M22.58,37.215a2.207,2.207,0,0,0-2.207,2.207v3.53a2.207,2.207,0,1,0,4.414,0v-3.53A2.208,2.208,0,0,0,22.58,37.215Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_4" data-name="Groupe 4">
+                                    <path id="Tracé_7" data-name="Tracé 7"
+                                        d="M32.928,12.231a2.208,2.208,0,0,1,0-3.121l2.5-2.5a2.207,2.207,0,0,1,3.121,3.121l-2.5,2.5A2.207,2.207,0,0,1,32.928,12.231Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_5" data-name="Groupe 5">
+                                    <path id="Tracé_8" data-name="Tracé 8"
+                                        d="M12.231,32.93a2.2,2.2,0,0,0-3.121,0l-2.5,2.5a2.207,2.207,0,0,0,3.121,3.121l2.5-2.5A2.2,2.2,0,0,0,12.231,32.93Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_6" data-name="Groupe 6">
+                                    <path id="Tracé_9" data-name="Tracé 9"
+                                        d="M37.215,22.58a2.207,2.207,0,0,1,2.207-2.207h3.531a2.207,2.207,0,1,1,0,4.413H39.422A2.206,2.206,0,0,1,37.215,22.58Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_7" data-name="Groupe 7">
+                                    <path id="Tracé_10" data-name="Tracé 10"
+                                        d="M7.944,22.58a2.207,2.207,0,0,0-2.207-2.207H2.207a2.207,2.207,0,1,0,0,4.413H5.738A2.206,2.206,0,0,0,7.944,22.58Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_8" data-name="Groupe 8">
+                                    <path id="Tracé_11" data-name="Tracé 11"
+                                        d="M32.928,32.93a2.208,2.208,0,0,1,3.121,0l2.5,2.5a2.207,2.207,0,0,1-3.121,3.12l-2.5-2.5A2.205,2.205,0,0,1,32.928,32.93Z"
+                                        fill="#cca952" />
+                                </g>
+                                <g id="Groupe_9" data-name="Groupe 9">
+                                    <path id="Tracé_12" data-name="Tracé 12"
+                                        d="M12.231,12.231a2.207,2.207,0,0,0,0-3.121l-2.5-2.5a2.207,2.207,0,0,0-3.121,3.12l2.5,2.5A2.2,2.2,0,0,0,12.231,12.231Z"
+                                        fill="#cca952" />
+                                </g>
+                            </g>
+                        </g>
+                    </svg></span>
                 <span id="slider-theme" aria-hidden="true"></span>
-                🌙
+                <span aria-hidden="true" style="transform: translateY(-2px);">
+                    <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 55.197 53.892" aria-hidden="true"
+                        focusable="false">
+                        <g id="moon" transform="translate(-12.146 626.349) rotate(-120)">
+                            <path id="moon-2" data-name="moon"
+                                d="M35.314,28.374a1.259,1.259,0,0,0-1.42-.405,13.191,13.191,0,0,1-4.567.787A14.222,14.222,0,0,1,15.3,14.378,14.436,14.436,0,0,1,21.447,2.494a1.325,1.325,0,0,0,.528-1.375,1.289,1.289,0,0,0-1.061-1A12.079,12.079,0,0,0,19.126,0,19.391,19.391,0,0,0,0,19.606,19.391,19.391,0,0,0,19.126,39.212a18.89,18.89,0,0,0,16.285-9.327A1.343,1.343,0,0,0,35.314,28.374Z"
+                                transform="translate(481.403 314.515)" fill="#ffd466" stroke="#cca952"
+                                stroke-width="2.5" />
+                        </g>
+                    </svg>
+                </span>
             </button>
         </div>
     </header>
