improve night/light icons design on mobile

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <div id="container-light-theme">
             <button id="btn-theme" type="button" aria-pressed="true" aria-label="Activate light mode"
                 title="Activate light mode">
-                <span id="icon-light-mode" aria-hidden="true" style="transform: translateY(-3px); margin-right: 4px">
+                <span id="icon-light-mode" aria-hidden="true">
                     <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
-                    <svg id="sun" xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 45.16 45.16"
+                    <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 45.16 45.16"
                         aria-hidden="true" focusable="false">
                         <g id="Groupe_11" data-name="Groupe 11">
                             <path id="sun-2" data-name="sun"
@@ -155,11 +155,11 @@
                         </g>
                     </svg></span>
                 <span id="slider-theme" aria-hidden="true"></span>
-                <span aria-hidden="true" style="transform: translateY(-2px);">
+                <span id="icon-dark-mode" aria-hidden="true">
                     <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
                     <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 55.197 53.892" aria-hidden="true"
-                        focusable="false">
+                        focusable="false" id="moon-icon">
                         <g id="moon" transform="translate(-12.146 626.349) rotate(-120)">
                             <path id="moon-2" data-name="moon"
                                 d="M35.314,28.374a1.259,1.259,0,0,0-1.42-.405,13.191,13.191,0,0,1-4.567.787A14.222,14.222,0,0,1,15.3,14.378,14.436,14.436,0,0,1,21.447,2.494a1.325,1.325,0,0,0,.528-1.375,1.289,1.289,0,0,0-1.061-1A12.079,12.079,0,0,0,19.126,0,19.391,19.391,0,0,0,0,19.606,19.391,19.391,0,0,0,19.126,39.212a18.89,18.89,0,0,0,16.285-9.327A1.343,1.343,0,0,0,35.314,28.374Z"
