make night/light icons responsive

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 <span id="icon-light-mode" aria-hidden="true">
                     <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
-                    <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 45.16 45.16"
-                        aria-hidden="true" focusable="false">
+                    <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45.16 45.16"
+                        aria-hidden="true" focusable="false" class="svg-icon-light">
                         <g id="Groupe_11" data-name="Groupe 11">
                             <path id="sun-2" data-name="sun"
                                 d="M22.58,11.269A11.312,11.312,0,1,0,33.891,22.581,11.325,11.325,0,0,0,22.58,11.269Z"
@@ -158,8 +158,8 @@
                 <span id="icon-dark-mode" aria-hidden="true">
                     <!-- Icon customized made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> -->
-                    <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 55.197 53.892" aria-hidden="true"
-                        focusable="false" id="moon-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55.197 53.892" aria-hidden="true"
+                        focusable="false" id="moon-icon" class="svg-icon-light">
                         <g id="moon" transform="translate(-12.146 626.349) rotate(-120)">
                             <path id="moon-2" data-name="moon"
                                 d="M35.314,28.374a1.259,1.259,0,0,0-1.42-.405,13.191,13.191,0,0,1-4.567.787A14.222,14.222,0,0,1,15.3,14.378,14.436,14.436,0,0,1,21.447,2.494a1.325,1.325,0,0,0,.528-1.375,1.289,1.289,0,0,0-1.061-1A12.079,12.079,0,0,0,19.126,0,19.391,19.391,0,0,0,0,19.606,19.391,19.391,0,0,0,19.126,39.212a18.89,18.89,0,0,0,16.285-9.327A1.343,1.343,0,0,0,35.314,28.374Z"
