add validate url for metatags images

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:title" content="CSS is awesome">
     <meta property="og:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
-    <meta property="og:image" content="images\awesome-css-big-image.png">
+    <meta property="og:image" content="https://awesome-css.pablobuisson.fr/images/awesome-css-big-image.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://awesome-css.pablobuisson.fr/">
     <meta property="twitter:title" content="CSS is awesome">
     <meta property="twitter:description"
         content="With modern CSS, we can easily create responsive and reactive layouts. I listed my favorite CSS features and properties we can use to that end.">
-    <meta property="twitter:image" content="images\awesome-css-big-image.png">
+    <meta property="twitter:image" content="https://awesome-css.pablobuisson.fr/images/awesome-css-big-image.png">
 </head>
 
 <body>
